chore: updated description and title in app.py and swagger.json and removed the leading /api from products api routes
